
* Fix '<input type="hidden" name="sort_on"...', now uses the default
  sort criteria if present

* Use individual persistent objects to represent table columns such as
  with the fodler_contents view.  UI for editing the folder_contents
  column objects has yet to be implemented.

* Fix <tfoot> usage [rossp]

* Integrate sort criteria with folder contents view columns for KSS
  sorting [rossp]

1.1.1 - 2009-08-31
------------------

* "Select all" and "Show all" (KSS) on folder contents view [rossp]

1.1.0 - 2009-08-21
------------------

* Use folder_contents instead of folder_contents_view to fix the links
  back to the folder contents form. [rossp]
* Tighten up the search form portlet spacing. [rossp]
* Use "Table Columns" fields for the folder contents form to control
  the folder contents columns
* Use a "Table Column Links" collection filed to specify which folder
  contents form columns should link to the item [rossp]
* Fix folder contents form buttons, "Copy", "Cut", "Rename", "Change
  State", and "Delete" now all work for objects listed by the
  collections even if they are in different folders.  [rossp]

1.0.2 - 2009-08-12
------------------

* Add some missing portal_types for criteria [rossp]
* Fix a unicode bug with GS portlets.xml import of the search portlet
  [rossp]

1.0.1 - 2009-08-11
------------------

* Merge collective.catalogexport to support CSV export of collection
  based user-submitted queries [rossp]

1.0 - 2009-04-20
----------------

* Ensure that only formFields are taken from the request
* Fix ignored integer range criteria (reported by SimO)
* Use a browser layer (suggested by optilude)
* Add ids and CSS classes to the batch_macro sort links (aaronv)
* Fix a bug with the "operator" field.  Thanks to Mauro!

0.9.5 - 2009-03-06
------------------

* Move package to src directory and fix testing buildout
* Register criteria AT types using the right package name
* Fix a bug with the JavaScript that narrows the criteria types by