@@ -18,6 +18,9 @@ selection # import to register
 from collective.formcriteria.criteria import checkbox
 checkbox # import to register
 
+from collective.formcriteria.criteria import pulldown
+pulldown # import to register
+
 from collective.formcriteria.criteria import daterange
 daterange # import to register
 
