@@ -20,13 +20,19 @@
     meta_type="Factory-based Type Information"/>
  <object name="FormPortalTypeCheckboxCriterion"
     meta_type="Factory-based Type Information"/>
+ <object name="FormPortalTypePulldownCriterion"
+    meta_type="Factory-based Type Information"/>
  <object name="FormReferenceCriterion"
     meta_type="Factory-based Type Information"/>
  <object name="FormReferenceCheckboxCriterion"
     meta_type="Factory-based Type Information"/>
+ <object name="FormReferencePulldownCriterion"
+    meta_type="Factory-based Type Information"/>
  <object name="FormSelectionCriterion"
     meta_type="Factory-based Type Information"/>
  <object name="FormCheckboxCriterion"
+    meta_type="Factory-based Type Information"/>
+ <object name="FormPulldownCriterion"
     meta_type="Factory-based Type Information"/>
  <object name="FormSimpleIntCriterion"
     meta_type="Factory-based Type Information"/>
